--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
         <!-- endbuild -->
         
     </head>
-    <body>
+    <body data-spy="scroll" data-target=".scroll-spy" data-offset="0">
         <!--[if lt IE 10]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
